--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Just Java</string>
+    <string name="image">Coffee cup and coffee beans</string>
     <string name="quan">Quantity</string>
     <string name="add">+</string>
     <string name="quan_display">0</string>
