Change price label to order summary in main xml. Change id name. Update calls to new id name in java file. Change variable name priceTextView to orderSummaryTextView. Update references to priceTextView to new variable name.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="add">+</string>
     <string name="quan_display">0</string>
     <string name="sub">-</string>
-    <string name="price">Price</string>
+    <string name="price">Order Summary</string>
     <string name="price_display">$0</string>
     <string name="order">Order</string>
 </resources>
