Add Checkbox. Add TextView to describe Checkbox. Add strings for new TextView and CheckBox. Add dimen for paddingLeft of Checkbox. Remove redundant cast to TextView in java file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="price">Order Summary</string>
     <string name="price_display">$0</string>
     <string name="order">Order</string>
+    <string name="topping">Toppings</string>
+    <string name="whip_top">Whipped Cream</string>
 </resources>
