Add Checkbox for chocolate. Update logic to include chocolate. Update orderSummary.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="order">Order</string>
     <string name="topping">Toppings</string>
     <string name="whip_top">Whipped Cream</string>
+    <string name="choc_top">Chocolte</string>
 </resources>
