--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="topping">Toppings</string>
     <string name="whip_top">Whipped Cream</string>
     <string name="choc_top">Chocolte</string>
+    <string name="input">Name</string>
 </resources>
