--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,11 +5,10 @@
     <string name="add">+</string>
     <string name="quan_display">0</string>
     <string name="sub">-</string>
-    <string name="price">Order Summary</string>
-    <string name="price_display">$0</string>
     <string name="order">Order</string>
     <string name="topping">Toppings</string>
     <string name="whip_top">Whipped Cream</string>
     <string name="choc_top">Chocolte</string>
     <string name="input">Name</string>
+    <string name="none"></string>
 </resources>
