--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,16 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <!-- Text for name of app [CHAR LIMIT=20] -->
     <string name="app_name">Sólo Java</string>
+    <!-- EditText hint text for adding name [CHAR LIMIT=20] -->
     <string name="input">Nombre</string>
+    <!-- Button text for order button [CHAR LIMIT=20] -->
+    <string name="order">Orden</string>
+    <!-- Summary text for name in order summary. Shown in format "Name: Lin" where Lin is the users name from input [CHAR LIMIT=20] -->
     <string name="summ_name">Nombre: <xliff:g id="name_input" example="Lin">%s</xliff:g></string>
+    <!-- Header text for list of toppings [CHAR LIMIT=20] -->
     <string name="topping">Ingredientes</string>
+    <!-- Checkbox text for adding whipped cream [CHAR LIMIT=20] -->
     <string name="whip_top">Crema batida</string>
+    <!-- Checkbox text for adding chocolate [CHAR LIMIT=20] -->
     <string name="choc_top">Chocolate</string>
+    <!-- Header text for quantity display [CHAR LIMIT=20] -->
     <string name="quan">Cantidad</string>
+    <!-- Quantity of cups for the order summary. It will be shown in the format of "Quantity: 3", where 3 is the number of cups ordered. [CHAR LIMIT=NONE]-->
     <string name="summ_quan">Cantidad: <xliff:g id="quantity" example="2">%d</xliff:g></string>
+    <!-- Whipped cream topping for the order summary. Shown in format of "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE] -->
     <string name="summ_whip">Agregue la crema batida? <xliff:g id="hasWhippedCream" example="true">%b</xliff:g></string>
+    <!-- Chocolate topping for the order summary. Shown in the format of "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE] -->
     <string name="summ_choc">Agregue el chocolate? <xliff:g id="hasChocolate" example="true">%b</xliff:g></string>
-    <string name="summ_total">Total: <xliff:g id="price" example="$10">%s</xliff:g></string>
+    <!-- Total price for order summary. Shown in the format of "Total: $15" where 15 is the price. [CHAR LIMIT=NONE] -->
+    <string name="summ_total">Total: $<xliff:g id="totInt" example="10">%d</xliff:g></string>
+    <!-- Thank you message for the order summary. [CHAR LIMIT=NONE] -->
     <string name="summ_thanks">Gracias!</string>
+    <!-- Text for accessibility of image [CHAR LIMIT=NONE] -->
     <string name="image">Taza de café y granos de café</string>
+    <!-- Subject line for the order summary email.[CHAR LIMIT=NONE] -->
+    <string name="order_summary_email_subject">Solo pedido de java coffee </string>
 </resources>
