--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,5 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <string name="app_name">Just Java</string>
-    <string name="summ_thanks">Merci</string>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <!-- Text for name of app [CHAR LIMIT=20] -->
+    <string name="app_name">Juste Java</string>
+    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
+    <string name="name">Ton petit nom</string>
+    <!-- Header text for toppings [CHAR LIMIT=20] -->
+    <string name="toppings">Les extras</string>
+    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
+    <string name="whipped_cream">Un nuage de lait</string>
+    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
+    <string name="chocolate">Chocolat</string>
+    <!-- Header text for quantity display [CHAR LIMIT=20] -->
+    <string name="quantity">Quantité</string>
+    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=5] -->
+    <string name="initial_quantity_value">0</string>
+    <!-- Button text for order button [CHAR LIMIT=20] -->
+    <string name="order">Commander</string>
+    <!-- Name for the order summary. Shown in the format of "Name: Lin" where Lin is the user's name. [CHAR LIMIT=NONE] -->
+    <string name="order_summary_name">Nom: <xliff:g id="name" example="Lin">%s</xliff:g></string>
+    <!-- Whipped cream topping for the order summary. Shown in format of "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE] -->
+    <string name="order_summary_whipped_cream">Avec un nuage de lait? <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>
+    <!-- Chocolate topping for the order summary. Shown in the format of "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE] -->
+    <string name="order_summary_chocolate">Avec du chocolat ? <xliff:g id="addChocolate" example="true">%b</xliff:g></string>
+    <!-- Quantity of cups for the order summary. It will be shown in the format of "Quantity: 3", where 3 is the number of cups ordered. [CHAR LIMIT=NONE]-->
+    <string name="order_summary_quantity">Quantité: <xliff:g id="quantity" example="2">%d</xliff:g></string>
+    <!-- Total price for order summary. Shown in the format of "Total: $15" where 15 is the price. [CHAR LIMIT=NONE] -->
+    <string name="order_summary_price">Total: $<xliff:g id="totInt" example="10">%d</xliff:g></string>
+    <!-- Thank you message for the order summary. [CHAR LIMIT=NONE] -->
+    <string name="thank_you">Mille merci!</string>
+    <!-- Subject line for the order summary email. [CHAR LIMIT=NONE] -->
+    <string name="order_summary_email_subject">Java, Juste Java pour </string>
 </resources>
