--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -2,32 +2,32 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Text for name of app [CHAR LIMIT=20] -->
     <string name="app_name">Juste Java</string>
-    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
-    <string name="name">Ton petit nom</string>
+    <!-- EditText hint text for adding name [CHAR LIMIT=20] -->
     <!-- Header text for toppings [CHAR LIMIT=20] -->
     <string name="toppings">Les extras</string>
-    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
-    <string name="whipped_cream">Un nuage de lait</string>
-    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
-    <string name="chocolate">Chocolat</string>
+    <!-- Checkbox text for adding whipped cream [CHAR LIMIT=20] -->
+    <string name="whip_top">Un nuage de lait</string>
+    <!-- Checkbox text for adding chocolate [CHAR LIMIT=20] -->
+    <string name="choc_top">Chocolat</string>
     <!-- Header text for quantity display [CHAR LIMIT=20] -->
-    <string name="quantity">Quantité</string>
-    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=5] -->
-    <string name="initial_quantity_value">0</string>
+    <string name="quan">Quantité</string>
     <!-- Button text for order button [CHAR LIMIT=20] -->
     <string name="order">Commander</string>
     <!-- Name for the order summary. Shown in the format of "Name: Lin" where Lin is the user's name. [CHAR LIMIT=NONE] -->
-    <string name="order_summary_name">Nom: <xliff:g id="name" example="Lin">%s</xliff:g></string>
+    <string name="summ_name">Nom: <xliff:g example="Lin" id="name">%s</xliff:g></string>
     <!-- Whipped cream topping for the order summary. Shown in format of "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE] -->
-    <string name="order_summary_whipped_cream">Avec un nuage de lait? <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>
+    <string name="summ_whip">Avec un nuage de lait? <xliff:g example="true" id="addWhippedCream">%b</xliff:g></string>
     <!-- Chocolate topping for the order summary. Shown in the format of "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE] -->
-    <string name="order_summary_chocolate">Avec du chocolat ? <xliff:g id="addChocolate" example="true">%b</xliff:g></string>
+    <string name="summ_choc">Avec du chocolat ? <xliff:g example="true" id="addChocolate">%b</xliff:g></string>
     <!-- Quantity of cups for the order summary. It will be shown in the format of "Quantity: 3", where 3 is the number of cups ordered. [CHAR LIMIT=NONE]-->
-    <string name="order_summary_quantity">Quantité: <xliff:g id="quantity" example="2">%d</xliff:g></string>
+    <string name="summ_quan">Quantité: <xliff:g example="2" id="quantity">%d</xliff:g></string>
     <!-- Total price for order summary. Shown in the format of "Total: $15" where 15 is the price. [CHAR LIMIT=NONE] -->
-    <string name="order_summary_price">Total: $<xliff:g id="totInt" example="10">%d</xliff:g></string>
+    <string name="summ_total">Total: $<xliff:g example="10" id="totInt">%d</xliff:g></string>
     <!-- Thank you message for the order summary. [CHAR LIMIT=NONE] -->
-    <string name="thank_you">Mille merci!</string>
+    <string name="summ_thanks">Mille merci!</string>
     <!-- Subject line for the order summary email. [CHAR LIMIT=NONE] -->
     <string name="order_summary_email_subject">Java, Juste Java pour </string>
+    <string name="topping">Les extras</string>
+    <string name="input">Ton petit nom</string>
+    <string name="image">Tasse de cafe et grains de cafe</string>
 </resources>
