Update string resource for currency localization in XML file. Update and correct orderSummary method to include currence conversion.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -22,8 +22,8 @@
     <string name="summ_whip">Agregue la crema batida? <xliff:g id="hasWhippedCream" example="true">%b</xliff:g></string>
     <!-- Chocolate topping for the order summary. Shown in the format of "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE] -->
     <string name="summ_choc">Agregue el chocolate? <xliff:g id="hasChocolate" example="true">%b</xliff:g></string>
-    <!-- Total price for order summary. Shown in the format of "Total: $15" where 15 is the price. [CHAR LIMIT=NONE] -->
-    <string name="summ_total">Total: $<xliff:g id="totInt" example="10">%d</xliff:g></string>
+    <!-- Total price for order summary. Shown in the format of "Total: $15" where $15 is the price. [CHAR LIMIT=NONE] -->
+    <string name="summ_total">Total: <xliff:g id="totInt" example="$10">%s</xliff:g></string>
     <!-- Thank you message for the order summary. [CHAR LIMIT=NONE] -->
     <string name="summ_thanks">Gracias!</string>
     <!-- Text for accessibility of image [CHAR LIMIT=NONE] -->
