--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -29,5 +29,5 @@
     <string name="order_summary_email_subject">Java, Juste Java pour </string>
     <string name="topping">Les extras</string>
     <string name="input">Ton petit nom</string>
-    <string name="image">Tasse de cafe et grains de cafe</string>
+    <string name="image">Café à la vapeur dans une tasse</string>
 </resources>
