Add display message to increment and decrement methods to display price as user chooses quantity. Correct strings for toast messages. Add string to indicate when order has been generated.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -32,4 +32,5 @@
     <string name="order_summary_email_subject">Solo pedido de java coffee </string>
     <string name="toastUpper">No puedes pedir más de 100 tazas de café</string>
     <string name="toastLower">No puedes pedir menos de 1 taza de café</string>
+    <string name="summOrderPlaced">" ¡Tu orden ha sido creada!"</string>
 </resources>
