--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -32,4 +32,5 @@
     <string name="image">Café à la vapeur dans une tasse</string>
     <string name="toastUpper">Vous ne pouvez pas commander plus de 100 tasses de café</string>
     <string name="toastLower">Vous ne pouvez pas commander moins de 1 tasse de café</string>
+    <string name="summOrderPlaced">" Votre commande a été créée!"</string>
 </resources>
